...
import { ProfileScreen } from '../features/profile/ProfileScreen';
import { useTheme } from '../theme/ThemeContext';
import type { ThemeColors } from '../theme/colors';

export type RootTabParamList = {
  Mapa: undefined;
  Parques: NavigatorScreenParams<ParquesStackParamList> | undefined;
  Usuario: undefined;
};

const Tab = createBottomTabNavigator<RootTabParamList>();

function getTabBarIconName(routeName: keyof RootTabParamList, focused: boolean) {
...
