# search.yaml
# Type in search input and verify results appear.

appId: host.exp.Exponent
---
- launchApp:
    appId: 'host.exp.Exponent'
    clearState: true
- waitForAnimationToEnd
# Dismiss onboarding if present
- tapOn:
    id: 'onboarding-skip-button'
    optional: true
- waitForAnimationToEnd
- assertVisible:
    id: 'discovery-screen'
- tapOn:
    id: 'search-name-input'
- inputText: 'Magic'
- waitForAnimationToEnd
- assertVisible:
    id: 'search-name-input'
